# disco

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts  vitest.setup.mts
.github/workflows/: main.yml
disco/: apps.py  celery.py  hosts.py  package.json  settings.py  settings_docker.py  urls.py  wsgi.py
disco/document_templates/: .~lock.example-template.docx#  72cc4dcf-9500-418f-a42e-7d980937a9db.yaml  example-template.docx
disco/install/: requirements.txt
disco/management/commands/: manifest.py  tile_validation_and_repair.py
disco/media/js/views/components/plugins/: rascoll-viewer.js
disco/migrations/: 0001_initial.py  0002_rascol_support.py
disco/ontologies/linkedart/: ontology_config.json
disco/templates/: index.htm
disco/templates/views/components/plugins/: rascoll-viewer.htm
disco/views/: create_manifests.py
disco/webpack/: webpack.commonold.js
docker/: disco-supervisor.conf  entrypoint.sh  env_file.env  settings_docker.py  settings_local.py
docker/conf.d/: disco-celerybeat.conf  disco-celeryd.conf
docker/production/: Dockerfile  entrypoint.sh  env_file.env
docker/webpack/: Dockerfile  entrypoint.sh  env_file.env
tests/: test_settings.py
webpack/: webpack.common.js  webpack.config.dev.js
